--- a/syle.css
+++ b/syle.css
@@ -10,6 +10,7 @@ html{
 body{
     background: hwb(261 8% 81%);
     color: #fff;
+    background-color: rgb(29, 16, 43);
 }
 #header{
     width: 100%;
